--- a/DeidreFinal/Web.config
+++ b/DeidreFinal/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -7,10 +7,14 @@
 
 <configuration>
     <system.web>
+      <authentication mode="Forms" />
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  </appSettings>
+      </appSettings>
+  <connectionStrings>
+    <add connectionString="Data Source=localhost;Initial Catalog=dbDeidreFinalAssign;Integrated Security=SSPI" name="connString"/>
+  </connectionStrings>
 </configuration>
